Adjusted Extras background. Fixes #6 Removed unnecessary ShadowNet code. Moved some TextureOverrides from Common and renamed.

--- a/Source/GUI/TextureOverrides/Loadout.ini
+++ b/Source/GUI/TextureOverrides/Loadout.ini
@@ -1,28 +1,28 @@
-[TextureOverride_Icon1]
+[TextureOverride_IconTick]
 hash=e11f8214
 filter_index=5
-[TextureOverride_Icon2]
+[TextureOverride_IconLock]
 hash=02cace63
 filter_index=5
-[TextureOverride_Icon3]
+[TextureOverride_IconGoggles]
 hash=a2d6895b
 filter_index=5
-[TextureOverride_Icon4]
+[TextureOverride_IconCrossbow]
 hash=e8cfbe07
 filter_index=5
-[TextureOverride_Icon5]
+[TextureOverride_IconRifle]
 hash=8fcc28d9
 filter_index=5
-[TextureOverride_Icon6]
+[TextureOverride_IconPistol]
 hash=4a6a0a89
 filter_index=5
-[TextureOverride_Icon7]
+[TextureOverride_IconGrenade1]
 hash=955b74f6
 filter_index=5
-[TextureOverride_Icon8]
+[TextureOverride_IconGrenade2]
 hash=c05c94e5
 filter_index=5
-[TextureOverride_Icon9]
+[TextureOverride_IconConfigure]
 hash=9a455563
 filter_index=5
 [TextureOverride_IconPanther]
@@ -34,3 +34,9 @@ filter_index=5
 [TextureOverride_IconGhost]
 hash=89b295ca
 filter_index=5
+[TextureOverride_BackgroundImage1]
+hash=1efc7981
+filter_index=1
+[TextureOverride_BackgroundImage2]
+hash=af059f46
+filter_index=1
