--- a/Source/GUI/TextureOverrides/SMI.ini
+++ b/Source/GUI/TextureOverrides/SMI.ini
@@ -1,81 +1,81 @@
-[TextureOverrideGUI_Icon1]
+[TextureOverride_IconAssault]
 hash=5a01d979
 filter_index=5
-[TextureOverrideGUI_Icon2]
+[TextureOverride_IconPanther]
 hash=82293978
 filter_index=5
-[TextureOverrideGUI_Icon3]
+[TextureOverride_IconGhost]
 hash=af14c34d
 filter_index=5
-[TextureOverrideGUI_TabArrow]
+[TextureOverride_TabArrow]
 hash=68c08ac1
 filter_index=5
-[TextureOverrideGUI_TabArrowHover]
+[TextureOverride_TabArrowHover]
 hash=6d733b11
 filter_index=5
-[TextureOverrideGUI_Tab]
+[TextureOverride_Tab]
 hash=3c3d328a
 filter_index=5
-[TextureOverrideGUI_TabSelected]
+[TextureOverride_TabSelected]
 hash=4db087ce
 filter_index=5
-[TextureOverrideGUI_TabHover]
+[TextureOverride_TabHover]
 hash=890e7c85
 filter_index=5
-[TextureOverrideGUI_BackgroundImage]
+[TextureOverride_BackgroundImage]
 hash=ab4b4bdc
 filter_index=1
-[TextureOverrideGUI_WindowImage1]
+[TextureOverride_WindowImage1]
 hash=391af771
 filter_index=3
-[TextureOverrideGUI_WindowImage2]
+[TextureOverride_WindowImage2]
 hash=14df4225
 filter_index=3
-[TextureOverrideGUI_Map_]
+[TextureOverride_Map]
 hash=427a74c3
 filter_index=3.1
-[TextureOverrideGUI_Locations]
+[TextureOverride_Locations]
 hash=2e6d4687
 filter_index=4
-[TextureOverrideGUI_Satellite]
+[TextureOverride_Satellite]
 hash=1180ac58
 filter_index=5
-[TextureOverrideGUI_Plane]
+[TextureOverride_Plane]
 hash=f5d79c7d
 filter_index=5
-[TextureOverrideGUI_SvM]
+[TextureOverride_SvM]
 hash=155b111e
 filter_index=5
-[TextureOverrideGUI_DottedLines]
+[TextureOverride_DottedLines]
 hash=361aae6d
 filter_index=4
-[TextureOverrideGUI_Reticle1a]
+[TextureOverride_Reticle1a]
 hash=f2ec0685
 filter_index=4.25
-[TextureOverrideGUI_Reticle1b]
+[TextureOverride_Reticle1b]
 hash=32cf690c
 filter_index=4.25
-[TextureOverrideGUI_Reticle2]
+[TextureOverride_Reticle2]
 hash=572bc70b
 filter_index=4.5
-[TextureOverrideGUI_Reticle3]
+[TextureOverride_Reticle3]
 hash=456277c9
 filter_index=4.75
-[TextureOverrideGUI_Reticle4]
+[TextureOverride_Reticle4]
 hash=230c0e6e
 filter_index=4.75
-[TextureOverrideGUI_Reticle5]
+[TextureOverride_Reticle5]
 hash=1c31b6d4
 filter_index=5
-[TextureOverrideGUI_Location_BG]
+[TextureOverride_LocationBG]
 hash=ac41c945
 filter_index=4
-[TextureOverrideGUI_Location_Shadow]
+[TextureOverride_LocationShadow]
 hash=35a4abd8
 filter_index=4
-[TextureOverrideGUI_MenuHexagons]
+[TextureOverride_MenuHexagons]
 hash=78d9c97b
 filter_index=4
-[TextureOverrideGUI_MenuDecoText]
+[TextureOverride_MenuDecoText]
 hash=b24a7a7f
 filter_index=5
