Fixes #1 Sniper rifle

--- a/Source/GUI/GUI.ini
+++ b/Source/GUI/GUI.ini
@@ -230,10 +230,14 @@ hash=fdf0b6f2a4f3acec
 run=CommandListGUIShader
 y2=17
 
-[ShaderOverrideLightFlares]
+[ShaderOverride_LightFlares]
 hash=c4c52320554d1ee9
 run=CommandListDefineDepthBuffer
 vs-t13=ref vb0
+
+[ShaderOverride_EmissiveSniper]
+hash=b0a794ab5f448e4d
+checktextureoverride=ps-t0
 
 [ShaderOverrideDump]
 hash=e20286cf682990af
