--- a/Source/GUI/TextureOverrides/HUD.ini
+++ b/Source/GUI/TextureOverrides/HUD.ini
@@ -1,3 +1,9 @@
+[PresetSniper]
+separation = 10
+convergence = 6
+transition = 100
+transition_type = linear
+
 [TextureOverride_Crosshair1]
 hash=4a15fb60
 filter_index=-2
@@ -6,6 +12,9 @@ hash=9941830c
 filter_index=-2
 [TextureOverride_Crosshair3]
 hash=c11fb4b5
+filter_index=-2
+[TextureOverride_Crosshair4]
+hash=484ed273
 filter_index=-2
 [TextureOverride_AmmoBG]
 hash=59b8b2d0
@@ -121,3 +130,4 @@ filter_index=4.5
 [TextureOverride_Sniper]
 hash=a152014e
 filter_index=-2
+preset=PresetSniper
