Fixes #1 Sniper Sonar, Added target markers to depth adjustment

--- a/Source/GUI/GUI.ini
+++ b/Source/GUI/GUI.ini
@@ -1,3 +1,6 @@
+;[Hunting]
+;analyse_options=dump_tex dds mono
+
 [Constants]
 global persist $gui_depth=0
 global persist $shader_index=0
@@ -147,7 +150,7 @@ run=CommandListDefineDepthVariables
 vs-cb11=ResourceMatrices
 vs-t13=vb0
 y2=3
-if (x2==-2)
+if (ps-t0==-2)
 	$goal_visible=1
 endif
 
@@ -179,6 +182,7 @@ y2=7
 hash=55642c752fa497f2
 run=CommandListGUIShader
 run=CommandListDefineDepthVariables
+vs-t13=vb0
 y2=8
 if (x2==-2)
 	$goal_visible=1
@@ -235,17 +239,24 @@ hash=c4c52320554d1ee9
 run=CommandListDefineDepthBuffer
 vs-t13=ref vb0
 
-[ShaderOverride_EmissiveSniper]
+[ShaderOverride_SniperStandard]
 hash=b0a794ab5f448e4d
 checktextureoverride=ps-t0
+
+[ShaderOverride_SniperSonar]
+hash=dd967c664d38d1cd
+checktextureoverride=ps-t1
 
 [ShaderOverrideDump]
 hash=e20286cf682990af
 checktextureoverride=vs-t0
-;dump=dump_tex dds share_dupes mono ps-t0
-;analyse_options=dump_cb txt
-;dump=ps-cb6 txt
-;dump=ps-cb7 txt
+
+[CommandListDumpTex]
+dump=dump_tex dds mono ps-t0
+[CommandListDumpCB]
+analyse_options=dump_cb txt
+[CommandListDumpVB]
+analyse_options=dump_vb txt
 
 [ShaderOverrideLoadout1]
 hash=23d8e685b5bb9aee
