Added alert symbol GUI layer

--- a/Source/GUI/TextureOverrides/Common.ini
+++ b/Source/GUI/TextureOverrides/Common.ini
@@ -16,6 +16,9 @@ filter_index=5
 [TextureOverride_PauseGoalBG]
 hash=2b567bdc
 filter_index=4
+[TextureOverride_PauseGoalAlert]
+hash=242afd91
+filter_index=5
 [TextureOverride_BackgroundImageScrape]
 hash=113d90d5
 filter_index=1
