Added 'Gameplay' Preset to fix cutscenes. Fixed Depth adjustment when in sonar mode.

--- a/Source/GUI/GUI.ini
+++ b/Source/GUI/GUI.ini
@@ -102,6 +102,8 @@ $show_depth=1,0
 
 [ResourceMatrices]
 
+[ResourceGoalBoundaries]
+
 [CommandListDefineDepthVariables]
 vs-cb11=ResourceMatrices
 run=CommandListDefineDepthBuffer
@@ -112,6 +114,12 @@ vs-t0=ResourceDepthBuffer
 [ShaderOverrideDepthSource]
 hash=29b5047597d81be1
 post ResourceDepthBuffer=copy ps-t0
+post ResourceMatrices=copy ps-cb11
+run=CommandListDisplayDepth
+
+[ShaderOverrideDepthSourceSonar]
+hash=5fe6d8164825fe0e
+post ResourceDepthBuffer=copy ps-t1
 post ResourceMatrices=copy ps-cb11
 run=CommandListDisplayDepth
 
@@ -183,8 +191,9 @@ hash=55642c752fa497f2
 run=CommandListGUIShader
 run=CommandListDefineDepthVariables
 vs-t13=vb0
+checktextureoverride=ps-t0
 y2=8
-if (x2==-2)
+if (ps-t0==-2)
 	$goal_visible=1
 endif
 
