--- a/Source/GUI/TextureOverrides/HUD_Depth.ini
+++ b/Source/GUI/TextureOverrides/HUD_Depth.ini
@@ -1,15 +1,24 @@
+[PresetGameplay]
+separation=100
+convergence=150
+transition=500
+
 [TextureOverride_Crosshair1]
 hash=4a15fb60
 filter_index=-1
+preset=PresetGameplay
 [TextureOverride_Crosshair2]
 hash=9941830c
 filter_index=-1
+preset=PresetGameplay
 [TextureOverride_Crosshair3]
 hash=c11fb4b5
 filter_index=-1
+preset=PresetGameplay
 [TextureOverride_Crosshair4]
 hash=484ed273
 filter_index=-1
+preset=PresetGameplay
 
 [TextureOverride_GoalCentre]
 hash=b5e01512
@@ -32,7 +41,6 @@ filter_index=-2
 [TextureOverride_GoalBackground]
 hash=d860b2d5
 filter_index=-2.5
-
 
 [TextureOverride_TargetMark1]
 hash=90d0b12f
