Cutscene fixes Convergence from DoF shaders which are disabled for performance. Fixes #4 corrects previous fix for #1

--- a/Source/GUI/GUI.ini
+++ b/Source/GUI/GUI.ini
@@ -197,49 +197,50 @@ if (ps-t0==-2)
 	$goal_visible=1
 endif
 
-[ShaderOverride_ShadowNetText1]
-hash=69dba94fd37b7ae4
+[ShaderOverride_ShadowNetText]
+hash=bc2dd3947bd54b63
 run=CommandListGUIShaderNoDump
 y2=9
 
-[ShaderOverride_ShadowNetText2]
-hash=bc2dd3947bd54b63
+[ShaderOverride_ShadowNetTextBatched]
+hash=69dba94fd37b7ae4
 run=CommandListGUIShaderNoDump
 y2=10
 
-[ShaderOverride_ShadowNet1]
+[ShaderOverride_ShadowNetDecorations]
 hash=8024ec61c6f1d980
 run=CommandListGUIShader
 run=CommandListMenuShader
 y2=11
 
-[ShaderOverride_ShadowNet2]
+[ShaderOverride_ShadowNetImages]
 hash=564a374fdac29117
 run=CommandListGUIShader
 y2=12
 
-[ShaderOverride_ShadowNet3]
+[ShaderOverride_ShadowNetOverlay1-Colour]
 hash=99b627bfa17cbe1d
 run=CommandListGUIShader
 y2=13
 
-[ShaderOverride_ShadowNet4]
+[ShaderOverride_ShadowNetOverlay2-Colour]
 hash=3cb6ac24789031c7
 run=CommandListGUIShader
 y2=14
 
-[ShaderOverride_ShadowNet5]
-hash=257d74e7390dfbb2
+[ShaderOverride_ShadowNetBlockColour]
+hash=6a2a901c49cf4c66
 run=CommandListGUIShader
 y2=15
+w2=$menu_open
 
-[ShaderOverride_ShadowNet6]
-hash=6a2a901c49cf4c66
+[ShaderOverride_ShadowNetBackground]
+hash=fdf0b6f2a4f3acec
 run=CommandListGUIShader
 y2=16
 
-[ShaderOverride_ShadowNet7]
-hash=fdf0b6f2a4f3acec
+[ShaderOverride_ShadowNetBackgroundElement]
+hash=257d74e7390dfbb2
 run=CommandListGUIShader
 y2=17
 
