Fix default convergence, fix #4 video on SMI and cutscene lighting (properly, not by checking w value)

--- a/Source/GUI/GUI.ini
+++ b/Source/GUI/GUI.ini
@@ -72,7 +72,7 @@ $menu_open=(rt_width == res_width)
 
 [CommandListGUIShader]
 run=CommandListGUIShaderNoDump
-dump=dump_tex dds share_dupes mono ps-t0
+;dump=dump_tex dds share_dupes mono ps-t0
 
 [CommandListGUIShaderNoDump]
 run=CommandListGUIShaderNoTextures
@@ -89,6 +89,7 @@ x=rt_width
 y=rt_height
 z=res_width
 w=res_height
+x3=o0
 
 [Constants]
 global $show_depth=0
@@ -161,7 +162,6 @@ y2=3
 if (ps-t0==-2)
 	$goal_visible=1
 endif
-
 [ShaderOverride_HUD+Images2]
 hash=9ceefab76c72863a
 run=CommandListGUIShader
@@ -258,10 +258,12 @@ hash=dd967c664d38d1cd
 checktextureoverride=ps-t1
 
 [ShaderOverrideDump]
-hash=e20286cf682990af
-checktextureoverride=vs-t0
+hash=06df5da3038f6424
+run= CommandListDumpTex
 
 [CommandListDumpTex]
+analyse_options=dump_tex dds mono
+[CommandListDumpTex0]
 dump=dump_tex dds mono ps-t0
 [CommandListDumpCB]
 analyse_options=dump_cb txt
