--- a/Source/Other/Cutscene DoF.ini
+++ b/Source/Other/Cutscene DoF.ini
@@ -1,7 +1,14 @@
+[Constants]
+global $is_cutscene=0
+
 [PresetCutscene]
-separation=100
+$is_cutscene=1
 convergence=20
 transition=500
+
+[ShaderOverride_Lighting]
+hash=9345e42dbd2b2a06
+x3=$is_cutscene
 
 [ShaderOverride_DoF_Mask]
 hash=0c72e71802f7805a
@@ -42,4 +49,3 @@ handling=skip
 hash=df7469f08763def2
 preset=PresetCutscene
 handling=skip
-
