--- a/d3dx.ini
+++ b/d3dx.ini
@@ -25,6 +25,8 @@ include = ShaderFixes\Custom\upscale.ini
 include = ShaderFixes\Custom\mouse.ini
 
 include = ShaderFixes\Custom\debug_2d.ini
+include = ShaderFixes\Custom\debug_cb.ini
+
 
 ; Uncomment to enable a custom shader that allows the stereo output mode to be
 ; changed to Side-by-Side or Top-and-Bottom via the F11 key. If you are using
