Fix issue with using VB as CB, consolidate GUI.ini file

--- a/Source/GUI/GUI.ini
+++ b/Source/GUI/GUI.ini
@@ -82,9 +82,9 @@ x2=ps-t0
 if $hide_ui || ($shader_isolation && $shader_index != y2)
 	handling=skip
 endif
-run=CommandListDefineResolution
+run=CommandListResolution
 
-[CommandListDefineResolution]
+[CommandListResolution]
 x=rt_width
 y=rt_height
 z=res_width
@@ -103,14 +103,16 @@ $show_depth=1,0
 
 [ResourceMatrices]
 
-[ResourceGoalBoundaries]
-
-[CommandListDefineDepthVariables]
-vs-cb11=ResourceMatrices
-run=CommandListDefineDepthBuffer
-
-[CommandListDefineDepthBuffer]
+[CommandListDepthBuffer]
 vs-t0=ResourceDepthBuffer
+
+[CommandListDepthVariables]
+run=CommandListDepthBuffer
+vs-cb11=ResourceMatrices
+
+[CommandListDepthGoal]
+run=CommandListDepthVariables
+vs-t13=copy vb0
 
 [ShaderOverrideDepthSource]
 hash=29b5047597d81be1
@@ -137,8 +139,7 @@ run=CommandListGUIShader
 [ShaderOverride_Text]
 hash=6f56e2eb15c63f14
 run=CommandListGUIShaderNoTextures
-run=CommandListDefineDepthVariables
-vs-t13=vb0
+run=CommandListDepthGoal
 y2=1
 w2=$menu_open
 x2=$goal_visible
@@ -146,8 +147,7 @@ x2=$goal_visible
 [ShaderOverride_TextBatched]
 hash=9fe114e79584a0ac
 run=CommandListGUIShaderNoTextures
-run=CommandListDefineDepthVariables
-vs-t13=vb0
+run=CommandListDepthGoal
 y2=2
 w2=$menu_open
 x2=$goal_visible
@@ -155,13 +155,13 @@ x2=$goal_visible
 [ShaderOverride_HUD+Images1]
 hash=7fdf27a3924d5530
 run=CommandListGUIShader
-run=CommandListDefineDepthVariables
+run=CommandListDepthGoal
 vs-cb11=ResourceMatrices
-vs-t13=vb0
 y2=3
 if (ps-t0==-2)
 	$goal_visible=1
 endif
+
 [ShaderOverride_HUD+Images2]
 hash=9ceefab76c72863a
 run=CommandListGUIShader
@@ -175,7 +175,7 @@ y2=5
 [ShaderOverride_BlockColourBatched]
 hash=07a16668ff270883
 run=CommandListGUIShader
-run=CommandListDefineDepthVariables
+run=CommandListDepthVariables
 vs-cb11=ResourceMatrices
 y2=6
 w2=$menu_open
@@ -189,8 +189,7 @@ y2=7
 [ShaderOverride_DecorationsBatched]
 hash=55642c752fa497f2
 run=CommandListGUIShader
-run=CommandListDefineDepthVariables
-vs-t13=vb0
+run=CommandListDepthGoal
 checktextureoverride=ps-t0
 y2=8
 if (ps-t0==-2)
@@ -246,8 +245,8 @@ y2=17
 
 [ShaderOverride_LightFlares]
 hash=c4c52320554d1ee9
-run=CommandListDefineDepthBuffer
-vs-t13=ref vb0
+run=CommandListDepthBuffer
+vs-t13=copy vb0
 
 [ShaderOverride_SniperStandard]
 hash=b0a794ab5f448e4d
@@ -259,7 +258,7 @@ checktextureoverride=ps-t1
 
 [ShaderOverrideDump]
 hash=06df5da3038f6424
-run= CommandListDumpTex
+;run= CommandListDumpTex
 
 [CommandListDumpTex]
 analyse_options=dump_tex dds mono
