fixes #4 title menu video depth (with texture wrap-around)

--- a/Source/GUI/TextureOverrides/Common.ini
+++ b/Source/GUI/TextureOverrides/Common.ini
@@ -1,13 +1,30 @@
-[TextureOverride_Screen]
-hash=36f63b9f
-filter_index=1
+[Constants]
+global $title_screen=0
+global $title_screen_prev=0
+
+[Present]
+;video is rendered first, so we have to carry over the flag from the previous frame
+$title_screen_prev=$title_screen
+$title_screen=0
+
+[ShaderOverride_Video]
+hash=9c28cf0e04d481ad
+x3=$title_screen_prev
+
+[TextureOverride_ScreenRenderTarget]
+hash=f15c731e
+filter_index=-1
 
 [TextureOverride_TitleScreenText]
 hash=08075193
 filter_index=3
+;probably redundant, but we're definitely in the tile screen if this is rendered
+$title_screen=1
 [TextureOverride_TitleScreenGFX]
 hash=8b344f95
 filter_index=2
+;probably redundant, but we're definitely in the tile screen if this is rendered
+$title_screen=1
 [TextureOverride_PauseIconGhost]
 hash=97662537
 filter_index=5
@@ -62,6 +79,10 @@ filter_index=1
 [TextureOverride_BackgroundGrid]
 hash=5ed7ac62
 filter_index=1
+;if render target is main screen, and the grid is shown, we're in  a menu
+if (o0==-1)
+$title_screen=1
+endif
 [TextureOverride_CodeWindows]
 hash=aced0585
 filter_index=2.1
