80% complete Goal depth adjustment (crosshair not yet accounted for, still flickering)

--- a/Source/GUI/GUI.ini
+++ b/Source/GUI/GUI.ini
@@ -14,6 +14,7 @@ y2=0
 z2=$gui_depth
 $menu_open=0
 $goal_visible=0
+ResourceGoalBoundaries=copy ResourceGoalBoundariesDefault
 
 [KeyToggleUI]
 Key=VK_OEM_7
@@ -77,6 +78,7 @@ run=CommandListGUIShaderNoDump
 [CommandListGUIShaderNoDump]
 run=CommandListGUIShaderNoTextures
 x2=ps-t0
+checktextureoverride=ps-t0
 
 [CommandListGUIShaderNoTextures]
 if $hide_ui || ($shader_isolation && $shader_index != y2)
@@ -103,6 +105,27 @@ $show_depth=1,0
 
 [ResourceMatrices]
 
+[Resource1x1]
+type=Texture2D
+width=1
+height=1
+format=R32_FLOAT
+mips=1
+array=1
+msaa=1
+
+[ResourceGoalBoundaries]
+type=RWStructuredBuffer
+stride=416
+array=1
+stereomode=1
+
+[ResourceGoalBoundariesDefault]
+type=RWStructuredBuffer
+stride=416
+array=1
+stereomode=1
+
 [CommandListDepthBuffer]
 vs-t0=ResourceDepthBuffer
 
@@ -113,6 +136,39 @@ vs-cb11=ResourceMatrices
 [CommandListDepthGoal]
 run=CommandListDepthVariables
 vs-t13=copy vb0
+vs-t14=ResourceGoalBoundaries
+post vs-t14=null
+
+[CustomShaderOutputGoalBounds]
+vs=ShaderFixes/depth_adjust_quad_vs.hlsl
+ps=ShaderFixes/depth_adjust_quad_ps.hlsl
+vs-cb11=ResourceMatrices
+run=CommandListOutputGoalBounds
+
+[CustomShaderOutputGoalBoundsBatched]
+vs=ShaderFixes/depth_adjust_quad_vs_batched.hlsl
+ps=ShaderFixes/depth_adjust_quad_ps.hlsl
+run=CommandListOutputGoalBounds
+
+[CustomShaderOutputGoalBoundsText]
+vs=ShaderFixes/depth_adjust_quad_text.hlsl
+ps=ShaderFixes/depth_adjust_quad_text.hlsl
+run=CommandListOutputGoalBounds
+
+[CustomShaderOutputGoalBoundsTextBatched]
+vs=ShaderFixes/depth_adjust_quad_text_batched.hlsl
+ps=ShaderFixes/depth_adjust_quad_text_batched.hlsl
+run=CommandListOutputGoalBounds
+
+[CommandListOutputGoalBounds]
+run=BuiltInCommandListUnbindAllRenderTargets
+run=CommandListGUIShaderNoDump
+run=CommandListDepthGoal
+o0=set_viewport Resource1x1
+ps-u1=ResourceGoalBoundaries
+post ps-u1=null
+draw=from_caller
+;dump=ps-t0 mono dds
 
 [ShaderOverrideDepthSource]
 hash=29b5047597d81be1
@@ -127,30 +183,29 @@ post ResourceMatrices=copy ps-cb11
 run=CommandListDisplayDepth
 
 [CommandListDisplayDepth]
-if ($show_depth)
-Resource\ShaderFixes\Custom\debug_2d.ini\Debug2D=ResourceDepthBuffer
-ps-cb11=ResourceMatrices
-endif
-
-[ShaderOverride_Video]
-hash=9c28cf0e04d481ad
-run=CommandListGUIShader
+;if ($show_depth)
+;Resource\ShaderFixes\Custom\debug_2d.ini\Debug2D=ResourceDepthBuffer
+;ps-cb11=ResourceMatrices
+;endif
 
 [ShaderOverride_Text]
 hash=6f56e2eb15c63f14
+run=CustomShaderOutputGoalBoundsText
 run=CommandListGUIShaderNoTextures
 run=CommandListDepthGoal
 y2=1
 w2=$menu_open
-x2=$goal_visible
+x2=-2
 
 [ShaderOverride_TextBatched]
 hash=9fe114e79584a0ac
+run=CustomShaderOutputGoalBoundsTextBatched
 run=CommandListGUIShaderNoTextures
 run=CommandListDepthGoal
 y2=2
 w2=$menu_open
-x2=$goal_visible
+x2=-2
+;Resource\ShaderFixes\Custom\debug_cb.ini\DebugBuf=ResourceGoalBoundaries
 
 [ShaderOverride_Decorations]
 hash=99994085a3f29305
@@ -160,9 +215,9 @@ y2=7
 
 [ShaderOverride_DecorationsBatched]
 hash=55642c752fa497f2
+run=CustomShaderOutputGoalBoundsBatched
 run=CommandListGUIShader
 run=CommandListDepthGoal
-checktextureoverride=ps-t0
 y2=8
 if (ps-t0==-2)
 	$goal_visible=1
@@ -170,6 +225,7 @@ endif
 
 [ShaderOverride_HUD+Images1]
 hash=7fdf27a3924d5530
+run=CustomShaderOutputGoalBounds
 run=CommandListGUIShader
 run=CommandListDepthGoal
 vs-cb11=ResourceMatrices
@@ -177,6 +233,7 @@ y2=3
 if (ps-t0==-2)
 	$goal_visible=1
 endif
+;dump=ResourceGoalBoundaries
 
 [ShaderOverride_HUD+Images2]
 hash=9ceefab76c72863a
@@ -185,13 +242,13 @@ y2=4
 
 [ShaderOverride_BlockColour]
 hash=2201df03f7a2d6a8
-run=CommandListGUIShaderNoTextures
+run=CommandListGUIShader
 y2=5
 
 [ShaderOverride_BlockColourBatched]
 hash=07a16668ff270883
-run=CommandListGUIShaderNoTextures
-run=CommandListDepthGoal
+run=CommandListGUIShader
+run=CommandListDepthVariables
 vs-cb11=ResourceMatrices
 y2=6
 w2=$menu_open
@@ -247,6 +304,7 @@ y2=17
 hash=c4c52320554d1ee9
 run=CommandListDepthBuffer
 vs-t13=copy vb0
+;analyse_options=dump_vb txt
 
 [ShaderOverride_SniperStandard]
 hash=b0a794ab5f448e4d
