Fixed Flickering of goal boundaries, still no crosshair

--- a/ShaderFixes/GUI.ini
+++ b/ShaderFixes/GUI.ini
@@ -7,14 +7,11 @@ global persist $shader_index=0
 global persist $shader_isolation=0
 global persist $hide_ui=0
 global $menu_open=0
-global $goal_visible=0
 
 [Present]
 y2=0
 z2=$gui_depth
 $menu_open=0
-$goal_visible=0
-ResourceGoalBoundaries=copy ResourceGoalBoundariesDefault
 
 [KeyToggleUI]
 Key=VK_OEM_7
@@ -114,35 +111,21 @@ mips=1
 array=1
 msaa=1
 
-[ResourceGoalBoundaries]
+[ResourceDepthValue]
 type=RWStructuredBuffer
-stride=416
+stride=4
 array=1
-stereomode=1
-
-[ResourceGoalBoundariesDefault]
-type=RWStructuredBuffer
-stride=416
-array=1
-stereomode=1
 
 [CommandListDepthBuffer]
-vs-t0=ResourceDepthBuffer
+vs-t10=ResourceDepthBuffer
 
 [CommandListDepthVariables]
 run=CommandListDepthBuffer
 vs-cb11=ResourceMatrices
 
-[CommandListDepthGoal]
-run=CommandListDepthVariables
-vs-t13=copy vb0
-vs-t14=ResourceGoalBoundaries
-post vs-t14=null
-
 [CustomShaderOutputGoalBounds]
 vs=ShaderFixes/depth_adjust_quad_vs.hlsl
 ps=ShaderFixes/depth_adjust_quad_ps.hlsl
-vs-cb11=ResourceMatrices
 run=CommandListOutputGoalBounds
 
 [CustomShaderOutputGoalBoundsBatched]
@@ -163,9 +146,11 @@ run=CommandListOutputGoalBounds
 [CommandListOutputGoalBounds]
 run=BuiltInCommandListUnbindAllRenderTargets
 run=CommandListGUIShaderNoDump
-run=CommandListDepthGoal
+vs-t13=copy vb0
+ps-cb11=ResourceMatrices
+ps-t10=ResourceDepthBuffer
 o0=set_viewport Resource1x1
-ps-u1=ResourceGoalBoundaries
+ps-u1=ResourceDepthValue
 post ps-u1=null
 draw=from_caller
 ;dump=ps-t0 mono dds
@@ -188,24 +173,35 @@ run=CommandListDisplayDepth
 ;ps-cb11=ResourceMatrices
 ;endif
 
+[CommandListDepthGoal]
+vs-t14=ResourceDepthValue
+post vs-t14=null
+if (ps-t0 == -2.5)
+post clear=ResourceDepthValue
+endif
+;if (x2 <= -2)
+;analyse_options=dump_cb txt dump_tex mono dds
+;endif
+
 [ShaderOverride_Text]
 hash=6f56e2eb15c63f14
-run=CustomShaderOutputGoalBoundsText
+if (ps-t0 == -2)
+	run=CustomShaderOutputGoalBoundsText
+endif
 run=CommandListGUIShaderNoTextures
 run=CommandListDepthGoal
 y2=1
 w2=$menu_open
-x2=-2
 
 [ShaderOverride_TextBatched]
 hash=9fe114e79584a0ac
-run=CustomShaderOutputGoalBoundsTextBatched
+if (ps-t0 == -2)
+	run=CustomShaderOutputGoalBoundsTextBatched
+endif
 run=CommandListGUIShaderNoTextures
 run=CommandListDepthGoal
-y2=2
 w2=$menu_open
-x2=-2
-;Resource\ShaderFixes\Custom\debug_cb.ini\DebugBuf=ResourceGoalBoundaries
+y2=2
 
 [ShaderOverride_Decorations]
 hash=99994085a3f29305
@@ -215,25 +211,24 @@ y2=7
 
 [ShaderOverride_DecorationsBatched]
 hash=55642c752fa497f2
-run=CustomShaderOutputGoalBoundsBatched
+if (ps-t0 == -2)
+	run=CustomShaderOutputGoalBoundsBatched
+endif
 run=CommandListGUIShader
 run=CommandListDepthGoal
 y2=8
-if (ps-t0==-2)
-	$goal_visible=1
-endif
 
 [ShaderOverride_HUD+Images1]
 hash=7fdf27a3924d5530
-run=CustomShaderOutputGoalBounds
+if (ps-t0 == -2)
+	run=CustomShaderOutputGoalBounds
+endif
 run=CommandListGUIShader
 run=CommandListDepthGoal
 vs-cb11=ResourceMatrices
 y2=3
-if (ps-t0==-2)
-	$goal_visible=1
-endif
-;dump=ResourceGoalBoundaries
+Resource\ShaderFixes\Custom\debug_cb.ini\DebugBuf=ResourceDepthValue
+;dump=ResourceDepthValue
 
 [ShaderOverride_HUD+Images2]
 hash=9ceefab76c72863a
@@ -250,8 +245,8 @@ hash=07a16668ff270883
 run=CommandListGUIShader
 run=CommandListDepthVariables
 vs-cb11=ResourceMatrices
-y2=6
 w2=$menu_open
+y2=6
 
 [ShaderOverride_ShadowNetText]
 hash=bc2dd3947bd54b63
@@ -287,8 +282,8 @@ y2=14
 [ShaderOverride_ShadowNetBlockColour]
 hash=6a2a901c49cf4c66
 run=CommandListGUIShader
-y2=15
 w2=$menu_open
+y2=15
 
 [ShaderOverride_ShadowNetBackground]
 hash=fdf0b6f2a4f3acec
