--- a/d3dx.ini
+++ b/d3dx.ini
@@ -10,8 +10,9 @@
 ; Resource sections (Replaced shaders in these mods should still go in
 ; ShaderFixes for now, unless the modders want to use CustomShaders or
 ; ShaderRegex to keep them standalone).
-include_recursive = Source
+include_recursive = ShaderFixes
 exclude_recursive = DISABLED*
+exclude_recursive = Custom
 
 ; Uncomment to enable a custom shader that allows the stereo output mode to be
 ; upscaled. NOTE: uncomment only if 'upscaling' and resolution are not zero in
@@ -59,10 +60,10 @@ unbuffered=0
 force_cpu_affinity=0
 
 ; Log NVAPI convergence modifications
-convergence=1
+convergence=0
 
 ; Log NVAPI separation modifications
-separation=1
+separation=0
 
 
 ; ------------------------------------------------------------------------------------------------------
