Moved symlinks back into ShaderFixes, too many includes in the wrong place!

--- a/ShaderFixes/GUI.ini
+++ b/ShaderFixes/GUI.ini
@@ -299,7 +299,13 @@ y2=17
 hash=c4c52320554d1ee9
 run=CommandListDepthBuffer
 vs-t13=copy vb0
-;analyse_options=dump_vb txt
+analyse_options=dump_vb txt 
+dump=ps-t0 mono dds
+
+[ShaderOverride_Glowing_Bits]
+hash=0639e523abe03973
+analyse_options=dump_vb txt
+dump=ps-t0 mono dds
 
 [ShaderOverride_SniperStandard]
 hash=b0a794ab5f448e4d
