--- a/ShaderFixes/Other - Cutscene DoF.ini
+++ b/ShaderFixes/Other - Cutscene DoF.ini
@@ -4,6 +4,7 @@ global $is_cutscene=0
 [PresetCutscene]
 $is_cutscene=1
 convergence=20
+release_transition=500
 
 [ShaderOverride_Lighting]
 hash=9345e42dbd2b2a06
