Tidied up all 3Dmigoto usage into header, properly fixed lighting and crosshair.

--- a/ShaderFixes/GUI.ini
+++ b/ShaderFixes/GUI.ini
@@ -7,11 +7,24 @@ global persist $shader_index=0
 global persist $shader_isolation=0
 global persist $hide_ui=0
 global $menu_open=0
+global $in_loadout=0
+global $in_loadout_prev=0
 
 [Present]
 y2=0
 z2=$gui_depth
 $menu_open=0
+w3=$in_loadout
+$in_loadout_prev=$in_loadout
+$in_loadout=0
+
+[TextureOverride_LoadoutCharacter]
+hash=63d7d532
+if ($menu_open)
+filter_index=-3
+;stereomode=1
+$in_loadout=1
+endif
 
 [KeyToggleUI]
 Key=VK_OEM_7
@@ -74,8 +87,9 @@ run=CommandListGUIShaderNoDump
 
 [CommandListGUIShaderNoDump]
 run=CommandListGUIShaderNoTextures
-x2=ps-t0
 checktextureoverride=ps-t0
+x2=ps-t0
+w2=$menu_open
 
 [CommandListGUIShaderNoTextures]
 if $hide_ui || ($shader_isolation && $shader_index != y2)
@@ -176,7 +190,7 @@ run=CommandListDisplayDepth
 [CommandListDepthGoal]
 vs-t14=ResourceDepthValue
 post vs-t14=null
-if (ps-t0 == -2.5)
+if (ps-t0 == -2.5 || ps-t0 == -1)
 post clear=ResourceDepthValue
 endif
 ;if (x2 <= -2)
@@ -191,7 +205,6 @@ endif
 run=CommandListGUIShaderNoTextures
 run=CommandListDepthGoal
 y2=1
-w2=$menu_open
 
 [ShaderOverride_TextBatched]
 hash=9fe114e79584a0ac
@@ -200,7 +213,6 @@ if (ps-t0 == -2)
 endif
 run=CommandListGUIShaderNoTextures
 run=CommandListDepthGoal
-w2=$menu_open
 y2=2
 
 [ShaderOverride_Decorations]
@@ -211,7 +223,7 @@ y2=7
 
 [ShaderOverride_DecorationsBatched]
 hash=55642c752fa497f2
-if (ps-t0 == -2)
+if (ps-t0 == -2 || ps-t0 == -1)
 	run=CustomShaderOutputGoalBoundsBatched
 endif
 run=CommandListGUIShader
@@ -227,7 +239,7 @@ run=CommandListGUIShader
 run=CommandListDepthGoal
 vs-cb11=ResourceMatrices
 y2=3
-Resource\ShaderFixes\Custom\debug_cb.ini\DebugBuf=ResourceDepthValue
+;Resource\ShaderFixes\Custom\debug_cb.ini\DebugBuf=ResourceDepthValue
 ;dump=ResourceDepthValue
 
 [ShaderOverride_HUD+Images2]
@@ -245,7 +257,6 @@ hash=07a16668ff270883
 run=CommandListGUIShader
 run=CommandListDepthVariables
 vs-cb11=ResourceMatrices
-w2=$menu_open
 y2=6
 
 [ShaderOverride_ShadowNetText]
@@ -282,7 +293,6 @@ y2=14
 [ShaderOverride_ShadowNetBlockColour]
 hash=6a2a901c49cf4c66
 run=CommandListGUIShader
-w2=$menu_open
 y2=15
 
 [ShaderOverride_ShadowNetBackground]
@@ -299,13 +309,9 @@ y2=17
 hash=c4c52320554d1ee9
 run=CommandListDepthBuffer
 vs-t13=copy vb0
-analyse_options=dump_vb txt 
-dump=ps-t0 mono dds
 
 [ShaderOverride_Glowing_Bits]
 hash=0639e523abe03973
-analyse_options=dump_vb txt
-dump=ps-t0 mono dds
 
 [ShaderOverride_SniperStandard]
 hash=b0a794ab5f448e4d
