Simplified code with regex

--- a/d3dx.ini
+++ b/d3dx.ini
@@ -373,7 +373,7 @@ repeat_rate=8
 ; can enable this if they want it:
 verbose_overlay = 1
 
-; tunable parameter to use in modified shaders as variable (StereoParams.Load(int3(1,0,0)).xyzw)
+; tunable parameter to use in modified shaders as variable (StereoParams.Load(int3(1,0,0)))
 ; enabling tuning results in a small performance hit because the parameter texture
 ;tune_enable=1
 ;tune_step=0.1
@@ -893,11 +893,11 @@ fix_sv_position=0
 ; the register used in the div instruction matches the one used in the multiply:
 ; 
 ;[ShaderRegex1.Pattern]
-;mul r\d+\.xyzw, r\d+\.yyyy, cb0\[28\]\.xyzw\n
-;mad r\d+\.xyzw, (?P<pos_x>r\d+)\.(?P<swizzle_x>[xyzw])[xyzw]{3}, cb0\[27\]\.xyzw, r\d+\.xyzw\n
-;mad r\d+\.xyzw, (?P<pos_z>r\d+)\.(?P<swizzle_z>[xyzw])[xyzw]{3}, cb0\[29\]\.xyzw, r\d+\.xyzw\n
-;add (?P<result>r\d+)\.xyzw, r\d+\.xyzw, cb0\[30\]\.xyzw\n
-;div r\d+\.[xyzw]{2}, (?P=result)\.[xyzw]{4}, r\d+\.wwww\n
+;mul r\d+\, r\d+\.y, cb0\[28\]\\n
+;mad r\d+\, (?P<pos_x>r\d+)\.(?P<swizzle_x>[xyzw])[xyzw]{3}, cb0\[27\]\, r\d+\\n
+;mad r\d+\, (?P<pos_z>r\d+)\.(?P<swizzle_z>[xyzw])[xyzw]{3}, cb0\[29\]\, r\d+\\n
+;add (?P<result>r\d+)\, r\d+\, cb0\[30\]\\n
+;div r\d+\.[xyzw]{2}, (?P=result)\.[xyzw]{4}, r\d+\.w\n
 ;
 ;
 ; The next section specifies how to modify the matched pattern. Again the name
@@ -915,7 +915,7 @@ fix_sv_position=0
 ;[ShaderRegex1.Pattern.Replace]
 ;\n
 ;// UE4 shadow correction:\n
-;ld_indexable(texture2d)(float,float,float,float) ${stereo}.xyzw, l(0, 0, 0, 0), t125.xyzw\n
+;ld_indexable(texture2d)(float,float,float,float) ${stereo}, l(0, 0, 0, 0), t125\n
 ;add ${tmp1}.x, ${pos_z}.${swizzle_z}, -${stereo}.y\n
 ;mad ${pos_x}.${swizzle_x}, -${tmp1}.x, ${stereo}.x, ${pos_x}.${swizzle_x}\n
 ;\n
