Updated d3dx to latest.

--- a/d3dx.ini
+++ b/d3dx.ini
@@ -28,7 +28,6 @@ include = ShaderFixes\Custom\mouse.ini
 include = ShaderFixes\Custom\debug_2d.ini
 include = ShaderFixes\Custom\debug_cb.ini
 
-
 ; Uncomment to enable a custom shader that allows the stereo output mode to be
 ; changed to Side-by-Side or Top-and-Bottom via the F11 key. If you are using
 ; SLI and this isn't working properly (partially blank or stuck image) you may
@@ -65,6 +64,15 @@ convergence=0
 ; Log NVAPI separation modifications
 separation=0
 
+; Enable 3DMigoto's deadlock detection algorithm. If you get hangs (not
+; crashes) this might help find out why.
+debug_locks=0
+
+; Enable 3DMigoto's crash handler to flush the log and write out a minidump
+; file in the event the game crashes. If the game hangs rather than crashes you
+; can manually invoke the handler by holding down Ctrl+Alt+F11 until you hear
+; the SOS tones:
+crash=0
 
 ; ------------------------------------------------------------------------------------------------------
 ; Command list to run on launch / after config reload.
@@ -266,6 +274,7 @@ next_marking_mode = no_modifiers VK_DECIMAL
 ; What action(s) to take when marking a selected shader/buffer
 ; "hlsl" = decompile shader to HLSL and copy to ShaderFixes
 ; "asm" = disassemble shader and copy to ShaderFixes (if hlsl is disabled or failed)
+; "regex" = output ShaderRegex patched shader if applicable (NOTE: Will lose associated command list)
 ; "clipboard" = copy shader/buffer hash to clipboard
 ; "mono_snapshot" = take mono screenshot (previously called mark_snapshot=1)
 ; "stereo_snapshot" = take stereo screenshot (previously called mark_snapshot=2)
@@ -712,6 +721,24 @@ ini_params = 120
 ; re-use the sections from the unmodified shaders.
 assemble_signature_comments = 1
 
+; Include raw "undecipherable custom data" when disassembling shaders for
+; ShaderRegex - leaving this out is for backwards compatibility with patterns
+; that may not expect to see it since we didn't used to include it. Shaders
+; dumped via export or hunting always include any undecipherable data.
+disassemble_undecipherable_custom_data = 1
+
+; Replace constant buffer offsets with indices & components in the comment
+; blocks when disassembling shaders so they match up with how they are accessed
+; in the code, making things easier to follow and simplifying ShaderRegex.
+patch_assembly_cb_offsets = 1
+
+; Enables more sensible behaviour when including HLSL files from subdirectories
+; that themselves include other files. Also disables backwards compatibility
+; where files could be specified relative to the game's working directory (i.e.
+; use #include "hud.hlsl" instead of #include "ShaderFixes/hud.hlsl"). Requires
+; two config reloads and a cache invalidation for changes to take effect
+recursive_include = 1
+
 ;------------------------------------------------------------------------------------------------------
 ; Analyzation options.
 ; 
@@ -802,12 +829,6 @@ fix_sv_position=0
 ; if (asint(IniParams[0].x) == asint(-0.0)) { /* depth inactive */ } else { /* depth active */ }
 ;depth_filter = depth_inactive
 ;depth_filter = depth_active
-; Only use replaced shader when it is used in conjunction with a specific shader
-; (e.g. to adjust a vertex shader ONLY when it is used with a specific pixel shader)
-; Deprecated: This option only works in very limited situations. To do anything
-; more advanced try setting a global variable in the vertex shader's command
-; list and test for it in the pixel shader's command list.
-;partner=af7b880f07630615
 ; Override a value from [Constants] when this shader is used:
 ;x=2.0
 ; Pass the dimensions of the active render target and resolution (obtained with
@@ -817,10 +838,18 @@ fix_sv_position=0
 ;z1=res_width
 ;w1=res_height
 ; Use t0 from active pixel shader for texture filtering. Will be 0 if no
-; [TextureOverride*] section exists for the texture or 1 if one does. For advanced
-; filtering, set a value for filter_index in the [TextureOverride] section.
-; This also works with other slot types (like o0, oD, ib, etc).
-;x2=ps-t0
+; [TextureOverride*] section exists for the texture or 1 if one does. For
+; advanced filtering, set a value for filter_index in the [TextureOverride]
+; section. This also works with other slot types (like o0, oD, ib, etc). Will
+; be -0.0 (needs a special test) if no resource bound in this slot:
+;x2 = ps-t0
+; Match the partner shader (any of vs/hs/ds/gs/ps/cs). Works in much the same
+; way as texture filtering - set a filter_index in the [ShaderOverride] or
+; [ShaderRegex] for the partner shader you want to match and it will be set in
+; this variable, or 1 = ShaderOverride/Regex matched with no filter_index, 0 =
+; No ShaderOverride/Regex matched, -0.0 = No shader bound. The filter_index
+; from a ShaderOverride always takes priority over any matching ShaderRegex.
+;local $partner = vs
 ; Override the shader model to allow using newer features like Texture2DMS:
 ;model=vs_5_0
 ; Activate a preset section when this shader override is in use.
@@ -893,11 +922,11 @@ fix_sv_position=0
 ; the register used in the div instruction matches the one used in the multiply:
 ; 
 ;[ShaderRegex1.Pattern]
-;mul r\d+\, r\d+\.y, cb0\[28\]\\n
-;mad r\d+\, (?P<pos_x>r\d+)\.(?P<swizzle_x>[xyzw])[xyzw]{3}, cb0\[27\]\, r\d+\\n
-;mad r\d+\, (?P<pos_z>r\d+)\.(?P<swizzle_z>[xyzw])[xyzw]{3}, cb0\[29\]\, r\d+\\n
-;add (?P<result>r\d+)\, r\d+\, cb0\[30\]\\n
-;div r\d+\.[xyzw]{2}, (?P=result)\.[xyzw]{4}, r\d+\.w\n
+;mul r\d+\.xyzw, r\d+\.yyyy, cb0\[28\]\.xyzw\n
+;mad r\d+\.xyzw, (?P<pos_x>r\d+)\.(?P<swizzle_x>[xyzw])[xyzw]{3}, cb0\[27\]\.xyzw, r\d+\.xyzw\n
+;mad r\d+\.xyzw, (?P<pos_z>r\d+)\.(?P<swizzle_z>[xyzw])[xyzw]{3}, cb0\[29\]\.xyzw, r\d+\.xyzw\n
+;add (?P<result>r\d+)\.xyzw, r\d+\.xyzw, cb0\[30\]\.xyzw\n
+;div r\d+\.[xyzw]{2}, (?P=result)\.[xyzw]{4}, r\d+\.wwww\n
 ;
 ;
 ; The next section specifies how to modify the matched pattern. Again the name
@@ -915,7 +944,7 @@ fix_sv_position=0
 ;[ShaderRegex1.Pattern.Replace]
 ;\n
 ;// UE4 shadow correction:\n
-;ld_indexable(texture2d)(float,float,float,float) ${stereo}, l(0, 0, 0, 0), t125\n
+;ld_indexable(texture2d)(float,float,float,float) ${stereo}.xyzw, l(0, 0, 0, 0), t125.xyzw\n
 ;add ${tmp1}.x, ${pos_z}.${swizzle_z}, -${stereo}.y\n
 ;mad ${pos_x}.${swizzle_x}, -${tmp1}.x, ${stereo}.x, ${pos_x}.${swizzle_x}\n
 ;\n
@@ -1041,11 +1070,17 @@ StereoConvergence = 150
 ; these constant buffers yourself unless you understand the nuances involved.
 DX10VSCBNumber=14
 DX10DSCBNumber=14
+
+; Workaround crashes and hangs in games that violate DirectX threading
+; constraints (e.g. Resident Evil 2/7, Devil May Cry 5). Set to 1 to always
+; enable workaround or 2 to only enable workaround with 3D Vision:
+APP_COMPAT_SHIM = 2
 ;
 ; If a setting doesn't have a name or you don't know what it is (check the
-; d3d11_log.txt for the names of all settings in this profile), you can use the
-; hex ID (in fact, you can even paste a complete profile from Geforce Profile
-; Manager - just be sure to delete any corrupt string settings if you do):
+; d3d11_log.txt for the names of all settings in this profile, or use the name
+; from Nvidia Profile Inspector), you can use the hex ID (in fact, you can even
+; paste a complete profile from Geforce Profile Manager - just be sure to
+; delete any corrupt string settings if you do):
 ;0x1033cec2 = 0x00000002
 ; Fix for new Profile flag that causes freeze when loading levels.
 0x105E2A1D=0x00000001
