Made loadout render target stereo without breaking shadows!

--- a/ShaderConfigs/GUI - Render Targets.ini
+++ b/ShaderConfigs/GUI - Render Targets.ini
@@ -1,5 +1,59 @@
-[TextureOverrideAllRenderTargets]
+[Constants]
+global $loadout_stage=0
+global $loadout_shader=0
+
+[TextureOverride_AllRenderTargets]
 match_type = Texture2D
 match_bind_flags = +render_target
-filter_index = 3
-;StereoMode=1
+match_width = = height * 16/9
+stereomode=2
+
+; Stereo RT, alternative to 63d7d532
+[Resource_StereoLoadoutRenderTarget]
+mode=stereo
+
+; This RT is used for shadow maps, but is also used to 
+; store the Loadout render before drawing it to the screen.
+; When a shader below is Reading/Writing to this RT, 
+; we swap it out for an identical one except stereo.
+[TextureOverride_ShadowMap]
+hash=63d7d532
+if $loadout_shader == $loadout_stage
+    if $loadout_stage == 1
+        pre Resource_StereoLoadoutRenderTarget = copy_desc o0
+        pre o0 = ref Resource_StereoLoadoutRenderTarget
+        post $loadout_stage = 2
+    else if $loadout_stage == 2
+        ; this is equivalent to texture_filter for HUD layers
+        pre x2=-5
+        pre ps-t0 = ref Resource_StereoLoadoutRenderTarget
+        post Resource_StereoLoadoutRenderTarget = null
+        post $loadout_stage = 0
+    endif
+endif
+
+; Reads from multiple sources and writes to RT
+; Loadout only: Writes to the replacement stereo RT
+[ShaderOverride_CombineLoadoutRTs]
+hash=d979b3967eb5f0d3
+if $loadout_stage == 0
+    pre $loadout_stage = 1
+endif
+pre $loadout_shader = 1
+pre checktextureoverride = o0
+post $loadout_shader = 0
+; change it back to 0 if unchanged
+if $loadout_stage == 1
+    post $loadout_stage = 0
+endif
+
+; Draws textures to the ShadowNet/Loadout menu
+; Loadout only: Reads from the replacement stereo RT
+[ShaderOverride_ShadowNet_Decorations_PS]
+hash=d8f047b122d01aab
+if $loadout_stage == 1
+    pre $loadout_stage = 2
+endif
+pre $loadout_shader = 2
+pre checktextureoverride = ps-t0
+post $loadout_shader = 0
