--- a/ShaderConfigs/GUI.ini
+++ b/ShaderConfigs/GUI.ini
@@ -326,6 +326,8 @@ checktextureoverride=ps-t1
 analyse_options=dump_tex dds mono
 [CommandListDumpTex0]
 dump=dump_tex dds mono ps-t0
+[CommandListDumpTex0Stereo]
+dump=dump_tex jps stereo ps-t0
 [CommandListDumpCB]
 analyse_options=dump_cb txt
 [CommandListDumpVB]
